--- a/HOME.html
+++ b/HOME.html
@@ -4,11 +4,11 @@
 	  <title>HOME</title>
 	  </head>
 	  <body>
-	  <div><a href="index.html"> <img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\th2.jpg"></a></div>
+	  <div><a href="index.html"> <img src="th2.jpg"></a></div>
      <h1>WELCOME TO THE POWER GYM!</h1>
 	 
 	
-<center><img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\rrr.jpg">
+<center><img src="rrr.jpg">
 
 
     <p>One of the large gyms that provides a choice of equipment for your session is Power Gym. 
