--- a/PRODUCT.html
+++ b/PRODUCT.html
@@ -4,13 +4,13 @@
 	  <title>PRODUCT</title>
 	  </head>
 	  <body>
-	   <div><a href="index.html"> <img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\th2.jpg"></a></div>
+	   <div><a href="index.html"> <img src="th2.jpg"></a></div>
 		<h1>THE PRODUCT</h1>
 		
 		
 	 <h1>BELT</h1>
 	 <p> Price 70$</p>
-  <center><img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\PRODUCT.jpg">
+  <center><img src="PRODUCT.jpg">
 	<p>It helps you to avoid injury to your back</p>
 	 <br>
 	  <br>
@@ -26,7 +26,7 @@
 			   
 	<h1>WHY PROTEIN</h1>
 	<p> Price 40$</p>
-  <center><img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\PRODUCT2.jpg">
+  <center><img src="PRODUCT2.jpg">
   <p>Whey protein is a powder made from the liquid part of milk that separates during cheese production. 
   It contains proteins that have essential amino acids and effects on the immune system. It is commonly used as a protein supplement. 
      Whey protein is not the same as glycomacropeptide, which is also found in whey but is not a protein</p>
@@ -44,7 +44,7 @@
 					
 	 <h1>CREATINE</h1>
 	 <p> Price 30$</p>
-    <center><img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\PRODUCT3.jpg">
+    <center><img src="PRODUCT3.jpg">
 	<p>Creatine is a substance that is made of amino acids and found in the body's muscles and brain. 
 	   It can also come from eating seafood and red meat or taking supplements. 
 	   Creatine helps the muscles produce energy during exercise and may improve performance and muscle mass</p>
