--- a/ABOUT.html
+++ b/ABOUT.html
@@ -4,7 +4,7 @@
 	  <title>ABOUT</title>
 	  </head>
 	  <body>
-	  <div><a href="index.html"> <img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\th2.jpg"></a></div>
+	  <div><a href="index.html"> <img src="th2.jpg"></a></div>
 		<h1>History of the Company</h1>
 	<p>Lifting heavy weights was a popular activity in Ancient India, Persia, Egypt, China, and Greece, among other regions. 
 	Of these areas, we are going to focus exclusively on Ancient Greece and India. 
@@ -32,8 +32,8 @@ Taken literally, the word means naked exercise, which provides a hint as to the 
 	 efficient, effective and safe exercise program and nutrition life-style system ever created. Our employees will be life 
 	 changers and will have extensive growth opportunities while fulfilling their passion and servicing their clients.</p>
    
-    <center><img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\about1.jpg">
-    <center><img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\jp.jpg">
+    <center><img src="about1.jpg">
+    <center><img src="jp.jpg">
   <style>
   
  	  	 
