--- a/CONTACT.html
+++ b/CONTACT.html
@@ -2,10 +2,10 @@
     <html>
        <head>
 	  <title>CONTACT</title>
-	  <div><a href="index.html"> <img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\th2.jpg"></a></div>
+	  <div><a href="index.html"> <img src="th2.jpg"></a></div>
 	  </head>
 	  <body>
-  <center><img src="C:\Users\Admin\Desktop\BIT 2 - A DAY\reniel estan HTML\rrr.jpg">
+  <center><img src="rrr.jpg">
 	<center><h1>PLEASE CONTACT US:</h1>
 	
 	  <p>Facebook page:PowerGYM</p>
